--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>My first project</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+     Iste ullam recusandae laboriosam, id molestias cupiditate voluptas ipsa eum
+     ex aliquid.</p>
 </body>
 </html>
