--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first project</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <h1>My first project</h1>
+    <br>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
      Iste ullam recusandae laboriosam, id molestias cupiditate voluptas ipsa eum
      ex aliquid.</p>
+     <br>
     <h3>It is  my first challenge and I will take it</h3>
-</body>
+    <br>
+    <h4>it was a very impotant to me</h4>
+    <br>
+    <br>
+    <div class="image-cls"><img src="images/satelite.png" ><div>
+
+ </body>
 </html>
